fix overflow

--- a/main.css
+++ b/main.css
@@ -82,6 +82,10 @@ h2 {
   margin-top: 5vh;
 }
 
+.section__projects {
+  overflow: hidden;
+}
+
 .project-intro {
   text-align: center;
   margin-bottom: 10vh;
